feat: add animation

--- a/src/_header.html
+++ b/src/_header.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="container">
-        <div class="header__links">
+        <div class="header__links _anim _appearance _delay-long">
             <ul>
                 <li><a href="https://github.com/johnnygrossamer" class="button__social icon-github-b"></a></li>
                 <li><a href="https://www.linkedin.com/in/johnnygrossamer" class="button__social icon-linkedin-b"></a></li>
@@ -8,12 +8,12 @@
             </ul>
         </div>
         <div class="header__row">
-            <div class="header__column">
-                <div class="header__photo">
+            <div class="header__column _anim _run-right">
+                <div class="header__photo ">
                     <img src="img/photo.png" alt="photo"/>
                 </div>
             </div>
-            <div class="header__column">
+            <div class="header__column _anim _run-left">
                 <div class="header__title">
                     <h1 class="name">YAUHENI VYSOTSKI</h1>
                     <div class="line"></div>
