--- a/src/_content.html
+++ b/src/_content.html
@@ -4,38 +4,43 @@
             <div class="content__column _briefly">
                 <div class="items">
                     <section class="selection">
-                        <h3>CONTACTS</h3>
-                        <ul class="contacts">
-                            <li><i class="icon-map"></i>Vitebsk, Belarus</li>
-                            <li><a href="tel:+375333063339"><i class="icon-phone"></i>+ 375 (33) 306-33-39</a></li>
-                            <li><a href="mailto:johnnygrossamer@gmail.com"><i class="icon-mail"></i>johnnygrossamer@gmail.com</a>
+                        <h3 class="_anim _ascent">CONTACTS</h3>
+                        <ul class="contacts _anim">
+                            <li class="_appearance _delay"><i class="icon-map"></i>Vitebsk, Belarus</li>
+                            <li class="_appearance _delay">
+                                <a href="tel:+375333063339"><i class="icon-phone"></i>+ 375 (33) 306-33-39</a>
                             </li>
-                            <li><a href="https://t.me/johnnygrossamer"><i class="icon-telegram"></i>@johnnygrossamer</a>
+                            <li class="_appearance _delay">
+                                <a href="mailto:johnnygrossamer@gmail.com"><i class="icon-mail"></i>johnnygrossamer@gmail.com</a>
+                            </li>
+                            <li class="_appearance _delay">
+                                <a href="https://t.me/johnnygrossamer"><i class="icon-telegram"></i>@johnnygrossamer</a>
                             </li>
                             <!--                    <li><a href="#"><i class="icon-discord"></i>johnnygrossamer#9665</a></li>-->
                         </ul>
                     </section>
                     <section class="selection">
-                        <h3>SKILLS</h3>
-                        <ul class="skills">
-                            <li>HTML5 (BEM)</li>
-                            <li>CSS3 (LESS, SCSS)</li>
-                            <li>JavaScript (ES6+)</li>
-                            <li>Node JS</li>
-                            <li>React JS</li>
-                            <li>GIT</li>
+                        <h3 class="_anim _ascent">SKILLS</h3>
+                        <ul class="skills _anim _delay">
+                            <li class="_appearance _delay">HTML5 (BEM)</li>
+                            <li class="_appearance _delay">CSS3 (LESS, SCSS)</li>
+                            <li class="_appearance _delay">JavaScript (ES6+)</li>
+                            <li class="_appearance _delay">Node JS</li>
+                            <li class="_appearance _delay">React JS</li>
+                            <li class="_appearance _delay">GIT</li>
                         </ul>
                     </section>
                 </div>
-
             </div>
             <div class="content__column">
                 <div class="items">
                     <section class="experience">
-                        <div class="title"><img src="img/icons/icons.svg#courses" alt="icon"/>
-                            <h3>COURSES</h3></div>
-                        <ul>
-                            <li>
+                        <div class="title _anim _ascent">
+                            <img src="img/icons/icons.svg#courses" alt="icon" class="_scale"/>
+                            <h3>COURSES</h3>
+                        </div>
+                        <ul class="_anim">
+                            <li class="_appearance _delay">
                                 <div class="date">2015</div>
                                 <div class="info">
                                     <h4 class="info__title">Computer Training Center «Specialist» at Bauman MSTU</h4>
@@ -43,7 +48,7 @@
                                     <p class="info__text">HTML и CSS. Создание сайтов на HTML 5 и СSS 3</p>
                                 </div>
                             </li>
-                            <li>
+                            <li class="_appearance _delay">
                                 <div class="date">2021</div>
                                 <div class="info">
                                     <h4 class="info__title">Computer Training Center «Specialist» at Bauman MSTU</h4>
@@ -57,7 +62,7 @@
                                     </p>
                                 </div>
                             </li>
-                            <li>
+                            <li class="_appearance _delay">
                                 <div class="date">2021 - 2022</div>
                                 <div class="info">
                                     <h4 class="info__title">Udemy</h4>
@@ -68,10 +73,12 @@
                         </ul>
                     </section>
                     <section class="experience">
-                        <div class="title"><img src="img/icons/icons.svg#experience" alt="icon"/>
-                            <h3>EXPERIENCE</h3></div>
-                        <ul>
-                            <li>
+                        <div class="title _anim _ascent">
+                            <img src="img/icons/icons.svg#experience" alt="icon" class="_scale"/>
+                            <h3>EXPERIENCE</h3>
+                        </div>
+                        <ul class="_anim">
+                            <li class="_appearance _delay">
                                 <div class="date">2012 - 2015</div>
                                 <div class="info">
                                     <h4 class="info__title">Website development</h4>
@@ -80,7 +87,7 @@
                                         technical specifications to working placement on hosting</p>
                                 </div>
                             </li>
-                            <li>
+                            <li class="_appearance _delay">
                                 <div class="date">2015 - 2016</div>
                                 <div class="info">
                                     <h4 class="info__title">“mSite” Company</h4>
@@ -89,7 +96,7 @@
                                         layout</p>
                                 </div>
                             </li>
-                            <li>
+                            <li class="_appearance _delay">
                                 <div class="date">2022 - ****</div>
                                 <div class="info">
                                     <h4 class="info__title">SUMMARY</h4>
